--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "html-to-text": "^8.1.0",
+    "node-schedule": "^2.1.0",
     "node-telegram-bot-api": "^0.54.0",
     "pg": "^8.7.1",
     "request": "^2.88.2",
