--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "awake-heroku": "^2.0.8",
     "axios": "^0.24.0",
     "cheerio": "^1.0.0-rc.10",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "html-to-text": "^8.1.0",
@@ -16,7 +17,9 @@
     "request": "^2.88.2",
     "request-promise": "^4.2.6"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "node-env-run": "^4.0.2"
+  },
   "scripts": {
     "test": "npm test",
     "start": "node index.js"
