--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "awake-heroku": "^2.0.8",
     "axios": "^0.24.0",
     "cheerio": "^1.0.0-rc.10",
+    "cron": "^1.8.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
