--- a/package.json
+++ b/package.json
@@ -6,17 +6,20 @@
   "dependencies": {
     "awake-heroku": "^2.0.8",
     "axios": "^0.24.0",
+    "canvas": "^2.9.3",
     "cheerio": "^1.0.0-rc.10",
     "cron": "^1.8.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "html-to-text": "^8.1.0",
+    "node-fetch": "^3.2.10",
     "node-schedule": "^2.1.0",
     "node-telegram-bot-api": "^0.54.0",
     "pg": "^8.7.1",
     "request": "^2.88.2",
-    "request-promise": "^4.2.6"
+    "request-promise": "^4.2.6",
+    "rss-parser": "^3.12.0"
   },
   "devDependencies": {
     "node-env-run": "^4.0.2"
