--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "pg": "^8.7.1",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
-    "rss-parser": "^3.12.0"
+    "rss-parser": "^3.12.0",
+    "translatte": "^3.0.1"
   },
   "devDependencies": {
     "node-env-run": "^4.0.2"
